Mac: Decode hardware to 420 instead of 422

If the decoded frame is going to be used as a CALayer overlay, then
it will never be converted to RGBA. If it is used by OpenGL, then the
same infrastructure for software frames will be employed to make an
expensive RGBA copy of the frame.

BUG=594452

Review URL: https://codereview.chromium.org/1822173002

Cr-Commit-Position: refs/heads/master@{#382797}

Former-commit-id: 24da601d444c8822c5ff0a10751b9384f25dd1b4